adds top 3 critics into html with the wonky animation and same styling as before

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,12 +24,22 @@
 
 }
 
-.top_matches{
-	height: 6em;
+#top_match_1{
+	height: 1.5em;
+	width: 0%;
+}
+
+#top_match_2{
+	height: 1.5em;
+	width: 0%;
+}
+
+#top_match_3{
+	height: 1.5em;
+	width: 0%;
 }
 
 #top_match{
-	width: 0%;
 }
 
 .movie{
