adds some styling to top_matches

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,26 +17,29 @@
 }
 
 .critic{
-	margin-top: 1em;
-	background: yellow;
-	border: solid;
-	border-width: thin;
+	margin-top: .5em;
 
 }
 
 #top_match_1{
-	height: 1.5em;
+	height: 1.7em;
 	width: 0%;
+	background: #2ECC71;
+	color: white;
 }
 
 #top_match_2{
-	height: 1.5em;
+	color:white;
+	height: 1.7em;
 	width: 0%;
+	background: #10467E
 }
 
 #top_match_3{
-	height: 1.5em;
+	color: white;
+	height: 1.7em;
 	width: 0%;
+	background: #BE4B00;
 }
 
 #top_match{
