--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -122,7 +122,7 @@
 			critic_id = top_match[i]["critic_id"];
 			critic_name = top_match[i]["name"]
 			critic_publication = top_match[i]["publication"]
-			top_match_html.innerHTML = critic_name + " - " + critic_publication + " - " + "Percentage: " + percentage + " - " + 'Matches: ' + matches;
+			top_match_html.innerHTML = "<a href='/critic/" + critic_id + "'" + ">" + critic_name + " - " + critic_publication + " - " + "Percentage: " + percentage + " - " + 'Matches: ' + matches + "</a>";
 			percentage = percentage - 16.7 + '%';
 			document.getElementById("top_match_" + (i+1)).style.width= percentage;
 			// $( "#top_match_" + (i+1)).animate({
