centers critics in their div

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@
 	border-width: thin;
 	text-decoration: none;
 	color: white;
-	background-color: #2D86AA;
+	background-color: #1d7599;
 }
 
 a{
@@ -26,6 +26,7 @@ a{
 }
 
 #top_match_1{
+	padding-top: 1px;
 	height: 1.7em;
 	width: 0%;
 	background: #0faa50;
@@ -37,6 +38,7 @@ a{
 }
 
 #top_match_2{
+	padding-top: 1px;
 	height: 1.7em;
 	width: 0%;
 	background: #10467E;
@@ -48,6 +50,7 @@ a{
 }
 
 #top_match_3{
+	padding-top: 1px;
 	height: 1.7em;
 	width: 0%;
 	background: #BE4B00;
