--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -122,14 +122,10 @@
 			critic_id = top_match[i]["critic_id"];
 			critic_name = top_match[i]["name"]
 			critic_publication = top_match[i]["publication"]
+			// add some sort of clarification here so they understand the match rate
 			top_match_html.innerHTML = "<a href='/critic/" + critic_id + "'" + ">" + critic_name + " - " + critic_publication + " - " + percentage + "%" + " for " +  + matches + ' matches' + "</a>";
 			percentage = percentage - 16.7 + '%';
 			document.getElementById("top_match_" + (i+1)).style.width= percentage;
-			// $( "#top_match_" + (i+1)).animate({
-			// 	width: percentage -15 + '%'
-			// }, 400, function(){
-			// 	});	
-			// adjustCriticWidth("top_match_" + i);
 		}		
 	}
 
