moves top html to application and yields to home. fixes css.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@
 	border-width: thin;
 	text-decoration: none;
 	color: white;
-	background-color: #1d7599;
+	background-color: #00CED1;
 }
 
 a{
@@ -23,6 +23,10 @@ a{
 .critic{
 	margin-top: .5em;
 
+}
+
+.top_matches{
+	margin-left: -30px;
 }
 
 #top_match_1{
