moves javascript into its own file, updates the critic view a little.

--- a/app/views/home/critic.html.erb
+++ b/app/views/home/critic.html.erb
@@ -1,1 +1,18 @@
-Test
+<div class="row top_matches">
+	<div id="top_match_1" class="critic col-md-10 col-md-offset-1" >
+	</div>
+</div>
+<div class="row top_matches">
+	<div id="top_match_2" class="critic col-md-10 col-md-offset-1" >
+	</div>
+</div>
+<div class="row top_matches">
+	<div id="top_match_3" class="critic col-md-10 col-md-offset-1" >
+	</div>
+</div>
+<br>
+<br>
+<div class="row">
+	<div class="col-md-2 col-md-offset-1">Critic Name</div>
+</div>
+
