--- a/app/views/home/critic.html.erb
+++ b/app/views/home/critic.html.erb
@@ -13,6 +13,6 @@
 <br>
 <br>
 <div class="row">
-	<div class="col-md-2 col-md-offset-1">Critic Name</div>
+	<div id="critic-name" class="col-md-2 col-md-offset-1"></div>
 </div>
 
