--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,13 @@
   		<div class="row top_matches">
-			<div id="top_match_1" class="critic col-md-10 col-md-offset-1" >
+			<div id="top_match_1" class="critic col-xs-12 col-md-10 col-md-offset-1" >
 			</div>
 		</div>
 		<div class="row top_matches">
-			<div id="top_match_2" class="critic col-md-10 col-md-offset-1" >
+			<div id="top_match_2" class="critic col-xs-12 col-md-10 col-md-offset-1" >
 			</div>
 		</div>
 		<div class="row top_matches">
-			<div id="top_match_3" class="critic col-md-10 col-md-offset-1" >
+			<div id="top_match_3" class="critic col-xs-12 col-md-10 col-md-offset-1" >
 			</div>
 		</div>
   	</div>
