--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <body>
   	<div class="container">
   		<div class="row">
-  			<a href="<%= root_path %>"  id="top_element" class="col-md-10 col-md-offset-1">Critic Matcher</a>
+  			<a href="<%= root_path %>"  id="top_element" class="col-xs-12 col-md-10 col-md-offset-1">Critic Matcher</a>
   		</div>
     <%= yield %>
 	</div>
