--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,6 +38,10 @@ a{
 
 }
 
+.havent_seen{
+	width: 10.5em;
+}
+
 #top_match_1{
 	padding-top: 1px;
 	height: 1.7em;
@@ -81,13 +85,12 @@ a{
 	border-width: thin;
 	padding: 5px;
 	padding-left: none;
-	width: 10em;
+	width: 11em;
 	margin: 10px 10px 0px 5px;
 }
 
 @-moz-document url-prefix(){
 	.clicked{
-	background: darkgray;
 	}
 }
 
@@ -120,9 +123,13 @@ button{
 	font-family: 'Lato', sans-serif;}
 
 img{
-	max-width: 100%;
-	max-height: 100%;
-	margin-left: 5px;
+	
+	width: 120px !important;
+	height: 175px !important;
+	display: block;
+	margin: 0 auto;
+	margin-right: 20px;
+
 }
 
 
