--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
   	</div>
 	<div class="container">
 		<div class="row">
-			<div id="movies" class="col-md-10 col-md-offset-1">
+			<div id="movies" class="col-xs-12 col-md-12">
 			</div>
 		</div>
 
