--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,7 +7,10 @@
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
   .movie{
-  	float: left;
+  	 -webkit-appearance: none;
+  	 float: left;
+  	 height: 80%;
+  	 width: 80%;
   }
   
   #top_element{
@@ -112,6 +115,7 @@ button{
 /* Remove button padding in FF */
 @-moz-document url-prefix(){
 	button{
+	 	-webkit-appearance: none;
     	border: solid;
     	border-width: 1px;
 	}
