--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,8 +9,7 @@
   .movie{
   	 -webkit-appearance: none;
   	 float: left;
-  	 height: 80%;
-  	 width: 80%;
+  	 margin-left: 1px;
   }
   
   #top_element{
