--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,15 +14,20 @@
 	  }
 
 	  img{
-	  	height:50%;
 	  }
 
 	  #movies{
-	  	width: 80%;
+	  	width:auto;
+	  	overflow: auto;
 	  }
 	  
 	  #top_element{
-	  	font-size: 2em;
+	  	font-size: 2.5em !important;
+	  	padding: 0 !important;
+	  }
+
+	  .critic{
+	  	margin-top: 0 !important;
 	  }
 }
 
@@ -43,8 +48,6 @@
 	font-family: 'Lato', sans-serif;
 	font-weight: 800;
 	font-style: italic;
-	border: solid;
-	border-width: thin;
 	text-decoration: none;
 	color: white;
 	background-color: #00CED1;
@@ -59,8 +62,7 @@ a{
 }
 
 .critic{
-	margin-top: .5em;
-
+ 	background: white;
 }
 
 .havent_seen{
@@ -68,7 +70,6 @@ a{
 }
 
 #top_match_1{
-	padding-top: 1px;
 	height: 1.7em;
 	width: 0%;
 	background: #0faa50;
