just broke it with removing gemfile and getting rake failures wrong number of arguments for action dispatch

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -37,7 +37,7 @@
 	border-width: thin;
 	padding: 5px;
 	padding-left: none;
-	width: 12em;
+	width: 364px;
 	margin: 15px 15px 0px 10px;
 }
 
@@ -143,8 +143,8 @@ button{
 
 img{
 	
-	width: 125px !important;
-	height: 182px !important;
+	width: 250px !important;
+	height: 364px !important;
 	display: block;
 	margin: 0 auto;
 
