--- a/app/views/home/critic.html.erb
+++ b/app/views/home/critic.html.erb
@@ -1,18 +1,11 @@
-<div class="row top_matches">
-	<div id="top_match_1" class="critic col-md-10 col-md-offset-1" >
-	</div>
-</div>
-<div class="row top_matches">
-	<div id="top_match_2" class="critic col-md-10 col-md-offset-1" >
-	</div>
-</div>
-<div class="row top_matches">
-	<div id="top_match_3" class="critic col-md-10 col-md-offset-1" >
-	</div>
-</div>
-<br>
-<br>
-<div class="row">
-	<div id="critic-name" class="col-md-2 col-md-offset-1"></div>
-</div>
+when this page loads
+javascript should iterate through to find the critic that matches the url
+then it should iterate through the movies matched for that critic to get the name and score
+for each create a div where you 
+put the name and meta critic score and critic score and your score but this should be sorted
 
+Then query the critic and show the rest of his movie ratings or show just the top 5 differential from metacritic
+
+<div id="critic_compare">
+	
+</div>
