adds table for critic score comparison with user. Still needs sorting by score

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,15 @@
   		<div class="row">
   			<a href="<%= root_path %>"  id="top_element" class="col-xs-12 col-md-10 col-md-offset-1">Critic Matcher</a>
   		</div>
+      <div class="row top_matches">
+        <div id="top_match_1" class="critic col-xs-12 col-md-10 col-md-offset-1" ></div>
+      </div>
+      <div class="row top_matches">
+        <div id="top_match_2" class="critic col-xs-12 col-md-10 col-md-offset-1" ></div>
+      </div>
+      <div class="row top_matches">
+        <div id="top_match_3" class="critic col-xs-12 col-md-10 col-md-offset-1" ></div>
+      </div>
     <%= yield %>
 	</div>
   </body>
