modifies results for api movies to 1000, adds comments to api controller.

--- a/app/views/critic/critic.html.erb
+++ b/app/views/critic/critic.html.erb
@@ -2,5 +2,9 @@
 <h1 id="critic_name"><%= @critic.first_name.capitalize + " " +  @critic.last_name.capitalize %></h1>
 <div id="critic_compare"></div>
 <table id="critic_results" class="table">
+	<th>Score Diff</th>
+	<th>Critic Score</th>
+	<th>User Score</th>
+	<th>Movie Title</th>
 </table>
 	
