--- a/app/views/critic/critic.html.erb
+++ b/app/views/critic/critic.html.erb
@@ -1,5 +1,5 @@
 
-<h1 id="critic_name"><%= @critic.first_name.capitalize + " " +  @critic.last_name.capitalize %></h1>
+<h1 class="critic_titles" id="critic_name"><%= @critic.first_name.capitalize + " " +  @critic.last_name.capitalize %></h1>
 <div id="critic_compare"></div>
 <table id="critic_results" class="table">
 	<th>Score Diff</th>
@@ -7,4 +7,34 @@
 	<th>User Score</th>
 	<th>Movie Title</th>
 </table>
+
+
+<h1 class="critic_titles">Against the Grain Movies - Positive</h1>
+<p class="critic_subtext"> Movies the critic loved the most that other critics hated</p>
+<table id="grain_positive" class="table">
+	<th>Score Diff</th>
+	<th>Critic Score</th>
+	<th>Meta Score</th>
+	<th>Movie Title</th>
+</table>
+
+<h1 class="critic_titles">Against the Grain Movies - Negative</h1>
+<p class="critic_subtext"> Movies the critic hated the most that other critics loved</p>
+<table id="grain_negative" class="table">
+	<th>Score Diff</th>
+	<th>Critic Score</th>
+	<th>Meta Score</th>
+	<th>Movie Title</th>
+</table>
+
+<h1 class="critic_titles">Critic Recent Recommendations</h1>
+<p class="critic_subtext">Top Movies <%= @critic.first_name.capitalize + " " +  @critic.last_name.capitalize %> loved from the last 12 months</p>
+<table id="grain_negative" class="table">
+	<th>Score Diff</th>
+	<th>Critic Score</th>
+	<th>Meta Score</th>
+	<th>Movie Title</th>
+</table>
+
+
 	
